finished training loop

--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -74,19 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "learning_rate = 0.05\n",
-    "training_iters = 125\n",
-    "batch_size = 32\n",
-    "num_hidden = 100\n",
-    "gradient_norm_threshold = 0.001\n",
-    "\n",
+    "learning_rate = 0.001\n",
+    "training_steps = 26\n",
+    "num_hidden = 200\n",
+    "display_step = 1\n",
     "\n",
     "# Network Parameters\n",
     "num_steps = 170\n",
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -139,17 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import math\n",
     "# Define weights and biases\n",
+    "\n",
     "# [100, 5]\n",
-    "weights = tf.Variable(tf.random_normal([num_hidden, num_classes]))\n",
+    "weights = tf.Variable(tf.random_uniform(\n",
+    "        shape = [num_hidden, num_classes],\n",
+    "        minval = (-1 / math.sqrt(num_hidden)),\n",
+    "        maxval = (1 / math.sqrt(num_hidden))\n",
+    "))\n",
     "# [5]\n",
-    "biases = tf.Variable(tf.random_normal([num_classes]))"
+    "biases = tf.Variable(tf.zeros([num_classes]))"
    ]
   },
   {
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -176,8 +180,8 @@
     "\n",
     "# Define a lstm cell with tensorflow\n",
     "cell = rnn_cell.BasicLSTMCell(\n",
-    "    num_units=num_hidden, \n",
-    "    forget_bias=1.0, \n",
+    "    num_units=num_hidden,\n",
+    "    forget_bias=5.0, \n",
     "    state_is_tuple=True\n",
     ")"
    ]
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -233,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output tensor shape: (170, ?, 100)\n"
+      "Output tensor shape: (170, ?, 200)\n"
      ]
     }
    ],
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -278,14 +282,14 @@
     "dummy_dataset = Patient(\"dataset/vcg.npy\", \"dataset/vcg_length.npy\", \"dataset/target.npy\")\n",
     "\n",
     "# Grab the first batch\n",
-    "batch_x, batch_length, batch_target = dummy_dataset.train.next_batch()\n",
+    "dummy_x, dummy_length, dummy_target = dummy_dataset.train.next_batch()\n",
     "\n",
     "# Get the shape before permutation\n",
-    "print \"Input batch shape before swap: \" + str(batch_x.shape)\n",
+    "print \"Input batch shape before swap: \" + str(dummy_x.shape)\n",
     "\n",
     "# Permute the 0th and 1st axes\n",
-    "batch_x = np.swapaxes(batch_x, 0, 1)\n",
-    "print \"Input batch shape after swap: \" + str(batch_x.shape)"
+    "dummy_x = np.swapaxes(dummy_x, 0, 1)\n",
+    "print \"Input batch shape after swap: \" + str(dummy_x.shape)"
    ]
   },
   {
@@ -298,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +470,8 @@
     "compare = tf.equal(tf.argmax(logits, 1), y)\n",
     "\n",
     "# Cast booleans to ints\n",
-    "accuracy = tf.reduce_mean(tf.cast(compare, tf.int64))\n",
+    "count_correct = tf.reduce_mean(tf.cast(compare, tf.float32))\n",
+    "accuracy = tf.mul(count_correct, 100)\n",
     "\n",
     "# Shape should be a single scalar value\n",
     "print \"Accuracy shape (scalar value): \" + str(accuracy.get_shape())"
@@ -481,27 +486,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy (before): 23.958332.\n",
+      "Step 0: Cost: 1.601059, Accuracy: 37.500000.\n",
+      "Step 1: Cost: 1.632983, Accuracy: 18.750000.\n",
+      "Step 2: Cost: 1.587351, Accuracy: 21.875000.\n",
+      "Step 3: Cost: 1.550169, Accuracy: 31.250000.\n",
+      "Step 4: Cost: 1.520597, Accuracy: 37.500000.\n",
+      "Step 5: Cost: 1.542135, Accuracy: 40.625000.\n",
+      "Step 6: Cost: 1.508973, Accuracy: 46.875000.\n",
+      "Step 7: Cost: 1.526103, Accuracy: 31.250000.\n",
+      "Step 8: Cost: 1.422827, Accuracy: 46.875000.\n",
+      "Step 9: Cost: 1.462875, Accuracy: 50.000000.\n",
+      "Step 10: Cost: 1.446089, Accuracy: 40.625000.\n",
+      "Step 11: Cost: 1.403894, Accuracy: 46.875000.\n",
+      "Step 12: Cost: 1.558663, Accuracy: 28.125000.\n",
+      "Step 13: Cost: 1.422697, Accuracy: 40.625000.\n",
+      "Step 14: Cost: 1.424655, Accuracy: 43.750000.\n",
+      "Step 15: Cost: 1.454548, Accuracy: 37.500000.\n",
+      "Step 16: Cost: 1.473743, Accuracy: 40.625000.\n",
+      "Step 17: Cost: 1.505228, Accuracy: 37.500000.\n",
+      "Step 18: Cost: 1.412878, Accuracy: 37.500000.\n",
+      "Step 19: Cost: 1.286304, Accuracy: 56.250000.\n",
+      "Step 20: Cost: 1.392101, Accuracy: 37.500000.\n",
+      "Step 21: Cost: 1.249809, Accuracy: 53.125000.\n",
+      "Step 22: Cost: 1.362743, Accuracy: 56.250000.\n",
+      "Step 23: Cost: 1.368659, Accuracy: 37.500000.\n",
+      "Step 24: Cost: 1.303052, Accuracy: 43.750000.\n",
+      "Step 25: Cost: 1.610935, Accuracy: 25.000000.\n",
+      "Validation accuracy (after): 28.125000.\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize all the variables\n",
     "init = tf.initialize_all_variables()\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
-    "    step = 1\n",
     "    \n",
-    "    # Retrieve the entire validation set\n",
+    "    # Grab validation set\n",
     "    valid_x = patient_dataset.validate.vcg\n",
+    "    valid_length = patient_dataset.validate.vcg_length\n",
     "    valid_y = patient_dataset.validate.target\n",
     "    \n",
-    "    #for step in range(2):\n",
-    "    batch_x, batch_length, batch_y = patient_dataset.train.next_batch()\n",
+    "    # Output accuracy for validation set\n",
+    "    print \"Validation accuracy (before): %2f.\" % sess.run(accuracy, feed_dict={\n",
+    "            x: np.swapaxes(valid_x, 0, 1), \n",
+    "            sequence_length: valid_length, \n",
+    "            y: valid_y \n",
+    "        })\n",
     "\n",
-    "    sess.run(train, feed_dict={x: np.swapaxes(batch_x, 0, 1), sequence_length: batch_length, y:batch_y})"
+    "    # Training loop\n",
+    "    for step in range(training_steps):\n",
+    "        \n",
+    "        # Grab the next batch from the training set\n",
+    "        batch_x, batch_length, batch_y = patient_dataset.train.next_batch()\n",
+    "        #print str(patient_dataset.train.index)\n",
+    "        \n",
+    "        # Train for one step\n",
+    "        sess.run(train, feed_dict={\n",
+    "                x: np.swapaxes(batch_x, 0, 1), \n",
+    "                sequence_length: batch_length, \n",
+    "                y: batch_y\n",
+    "        })\n",
+    "        \n",
+    "        # Output cost\n",
+    "        if step % display_step == 0:\n",
+    "            step_cost, step_accuracy = sess.run([cost, accuracy], feed_dict={\n",
+    "                x: np.swapaxes(batch_x, 0, 1), \n",
+    "                sequence_length: batch_length, \n",
+    "                y: batch_y   \n",
+    "            })\n",
+    "            print \"Step %d: Cost: %4f, Accuracy: %2f.\" % (step, step_cost, step_accuracy)\n",
+    "        \n",
+    "    # Output accuracy for validation set\n",
+    "    print \"Validation accuracy (after): %2f.\" % sess.run(accuracy, feed_dict={\n",
+    "            x: np.swapaxes(valid_x, 0, 1), \n",
+    "            sequence_length: valid_length, \n",
+    "            y: valid_y \n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We feed it the validation set before and after to show that the neural network has learned *something*. However, these numbers are far from impressive. We should consider other parameters that could potentially affect the dyssynchrony."
    ]
   },
   {
@@ -517,7 +598,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -531,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
