--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -90,6 +90,7 @@
     "num_steps = 170\n",
     "num_inputs = 3\n",
     "num_classes = 5\n",
+    "epochs = 4\n",
     "\n",
     "\n",
     "# Where TensorFlow saves metadata for TensorBoard\n",
@@ -152,8 +153,12 @@
     "        minval = (-1 / math.sqrt(num_hidden)),\n",
     "        maxval = (1 / math.sqrt(num_hidden))\n",
     "))\n",
+    "# weights = tf.Variable(tf.random_normal(\n",
+    "#         shape = [num_hidden, num_classes],\n",
+    "#         ))\n",
     "# [5]\n",
-    "biases = tf.Variable(tf.zeros([num_classes]))"
+    "biases = tf.Variable(tf.zeros([num_classes]))\n",
+    "# biases = tf.Variable(tf.random_normal([num_classes]))"
    ]
   },
   {
@@ -207,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "output, states = tf.nn.dynamic_rnn(\n",
+    "outputs, states = tf.nn.dynamic_rnn(\n",
     "    cell=cell,\n",
     "    dtype=tf.float32,\n",
     "    sequence_length=sequence_length,\n",
@@ -243,7 +248,7 @@
    ],
    "source": [
     "# Shape of output tensor\n",
-    "print \"Output tensor shape: \" + str(output.get_shape())"
+    "print \"Output tensor shape: \" + str(outputs.get_shape())"
    ]
   },
   {
@@ -316,10 +321,10 @@
     }
    ],
    "source": [
-    "logits = tf.matmul(output[-1], weights) + biases\n",
+    "prediction = tf.matmul(outputs[-1], weights) + biases\n",
     "\n",
     "# Shape should be [batch_size, num_classes]\n",
-    "print \"Shape of output after linear activation: \" + str(logits.get_shape())"
+    "print \"Shape of output after linear activation: \" + str(prediction.get_shape())"
    ]
   },
   {
@@ -354,7 +359,7 @@
    ],
    "source": [
     "# Calculate costs for each example\n",
-    "costs = tf.nn.sparse_softmax_cross_entropy_with_logits(logits, y)\n",
+    "costs = tf.nn.sparse_softmax_cross_entropy_with_logits(prediction, y)\n",
     "print \"Shape of costs (before averaging): \" + str(costs.get_shape())"
    ]
   },
@@ -467,7 +472,7 @@
    ],
    "source": [
     "# Compare predictions with targets\n",
-    "compare = tf.equal(tf.argmax(logits, 1), y)\n",
+    "compare = tf.equal(tf.argmax(prediction, 1), y)\n",
     "\n",
     "# Cast booleans to ints\n",
     "count_correct = tf.reduce_mean(tf.cast(compare, tf.float32))\n",
@@ -495,34 +500,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy (before): 23.958332.\n",
-      "Step 0: Cost: 1.601059, Accuracy: 37.500000.\n",
-      "Step 1: Cost: 1.632983, Accuracy: 18.750000.\n",
-      "Step 2: Cost: 1.587351, Accuracy: 21.875000.\n",
-      "Step 3: Cost: 1.550169, Accuracy: 31.250000.\n",
-      "Step 4: Cost: 1.520597, Accuracy: 37.500000.\n",
-      "Step 5: Cost: 1.542135, Accuracy: 40.625000.\n",
-      "Step 6: Cost: 1.508973, Accuracy: 46.875000.\n",
-      "Step 7: Cost: 1.526103, Accuracy: 31.250000.\n",
-      "Step 8: Cost: 1.422827, Accuracy: 46.875000.\n",
-      "Step 9: Cost: 1.462875, Accuracy: 50.000000.\n",
-      "Step 10: Cost: 1.446089, Accuracy: 40.625000.\n",
-      "Step 11: Cost: 1.403894, Accuracy: 46.875000.\n",
-      "Step 12: Cost: 1.558663, Accuracy: 28.125000.\n",
-      "Step 13: Cost: 1.422697, Accuracy: 40.625000.\n",
-      "Step 14: Cost: 1.424655, Accuracy: 43.750000.\n",
-      "Step 15: Cost: 1.454548, Accuracy: 37.500000.\n",
-      "Step 16: Cost: 1.473743, Accuracy: 40.625000.\n",
-      "Step 17: Cost: 1.505228, Accuracy: 37.500000.\n",
-      "Step 18: Cost: 1.412878, Accuracy: 37.500000.\n",
-      "Step 19: Cost: 1.286304, Accuracy: 56.250000.\n",
-      "Step 20: Cost: 1.392101, Accuracy: 37.500000.\n",
-      "Step 21: Cost: 1.249809, Accuracy: 53.125000.\n",
-      "Step 22: Cost: 1.362743, Accuracy: 56.250000.\n",
-      "Step 23: Cost: 1.368659, Accuracy: 37.500000.\n",
-      "Step 24: Cost: 1.303052, Accuracy: 43.750000.\n",
-      "Step 25: Cost: 1.610935, Accuracy: 25.000000.\n",
-      "Validation accuracy (after): 28.125000.\n"
+      "Validation accuracy (before): 28.125000.\n",
+      "Epoch 0 of 4 loss: 38.5699089766\n",
+      "Epoch 1 of 4 loss: 36.5276751518\n",
+      "Epoch 2 of 4 loss: 36.3755083084\n",
+      "Epoch 3 of 4 loss: 36.156022191\n",
+      "Epoch 4 of 4 loss: 36.4165626764\n",
+      "Testing accuracy: 25.000000.\n"
      ]
     }
    ],
@@ -538,6 +522,11 @@
     "    valid_length = patient_dataset.validate.vcg_length\n",
     "    valid_y = patient_dataset.validate.target\n",
     "    \n",
+    "     # Grab testing set\n",
+    "    test_x = patient_dataset.test.vcg\n",
+    "    test_length = patient_dataset.test.vcg_length\n",
+    "    test_y = patient_dataset.test.target\n",
+    "    \n",
     "    # Output accuracy for validation set\n",
     "    print \"Validation accuracy (before): %2f.\" % sess.run(accuracy, feed_dict={\n",
     "            x: np.swapaxes(valid_x, 0, 1), \n",
@@ -546,34 +535,48 @@
     "        })\n",
     "\n",
     "    # Training loop\n",
-    "    for step in range(training_steps):\n",
-    "        \n",
-    "        # Grab the next batch from the training set\n",
-    "        batch_x, batch_length, batch_y = patient_dataset.train.next_batch()\n",
-    "        #print str(patient_dataset.train.index)\n",
-    "        \n",
-    "        # Train for one step\n",
-    "        sess.run(train, feed_dict={\n",
-    "                x: np.swapaxes(batch_x, 0, 1), \n",
-    "                sequence_length: batch_length, \n",
-    "                y: batch_y\n",
-    "        })\n",
-    "        \n",
-    "        # Output cost\n",
-    "        if step % display_step == 0:\n",
-    "            step_cost, step_accuracy = sess.run([cost, accuracy], feed_dict={\n",
-    "                x: np.swapaxes(batch_x, 0, 1), \n",
-    "                sequence_length: batch_length, \n",
-    "                y: batch_y   \n",
+    "    for epoch in range(epochs+1):\n",
+    "        epoch_loss = 0\n",
+    "        for step in range(training_steps):\n",
+    "\n",
+    "            # Grab the next batch from the training set\n",
+    "            batch_x, batch_length, batch_y = patient_dataset.train.next_batch()\n",
+    "            #print str(patient_dataset.train.index)\n",
+    "\n",
+    "            # Train for one step\n",
+    "#             sess.run(train, feed_dict={\n",
+    "#                     x: np.swapaxes(batch_x, 0, 1), \n",
+    "#                     sequence_length: batch_length, \n",
+    "#                     y: batch_y\n",
+    "#             })\n",
+    "            \n",
+    "            # Accumulate cost for each epoch\n",
+    "            _, step_cost = sess.run([train, cost], feed_dict={\n",
+    "                    x: np.swapaxes(batch_x, 0, 1), \n",
+    "                    sequence_length: batch_length, \n",
+    "                    y: batch_y\n",
     "            })\n",
-    "            print \"Step %d: Cost: %4f, Accuracy: %2f.\" % (step, step_cost, step_accuracy)\n",
-    "        \n",
-    "    # Output accuracy for validation set\n",
-    "    print \"Validation accuracy (after): %2f.\" % sess.run(accuracy, feed_dict={\n",
-    "            x: np.swapaxes(valid_x, 0, 1), \n",
-    "            sequence_length: valid_length, \n",
-    "            y: valid_y \n",
-    "        })"
+    "            epoch_loss += step_cost\n",
+    "\n",
+    "            # Output cost\n",
+    "#             if step % display_step == 0:\n",
+    "#                 step_accuracy = sess.run(accuracy, feed_dict={\n",
+    "#                     x: np.swapaxes(batch_x, 0, 1), \n",
+    "#                     sequence_length: batch_length, \n",
+    "#                     y: batch_y   \n",
+    "#                 })\n",
+    "            \n",
+    "            #print \"Step %d: Cost: %4f, Accuracy: %2f.\" % (step, step_cost, step_accuracy)\n",
+    "                \n",
+    "        print 'Epoch', epoch, 'of', epochs, 'loss:', epoch_loss\n",
+    "    \n",
+    "\n",
+    "    # Output accuracy for testing set\n",
+    "    print \"Testing accuracy: %2f.\" % sess.run(accuracy, feed_dict={\n",
+    "            x: np.swapaxes(test_x, 0, 1), \n",
+    "            sequence_length: test_length, \n",
+    "            y: test_y \n",
+    "        })                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      "
    ]
   },
   {
@@ -584,21 +587,12 @@
    "source": [
     "We feed it the validation set before and after to show that the neural network has learned *something*. However, these numbers are far from impressive. We should consider other parameters that could potentially affect the dyssynchrony."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -612,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
