--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# Hyperparameters\n",
     "learning_rate = 0.001\n",
-    "training_steps = 26\n",
+    "training_steps = 13\n",
     "num_hidden = 200\n",
     "display_step = 1\n",
     "\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -500,12 +500,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy (before): 28.125000.\n",
-      "Epoch 0 of 4 loss: 38.5699089766\n",
-      "Epoch 1 of 4 loss: 36.5276751518\n",
-      "Epoch 2 of 4 loss: 36.3755083084\n",
-      "Epoch 3 of 4 loss: 36.156022191\n",
-      "Epoch 4 of 4 loss: 36.4165626764\n",
+      "Validation accuracy (before): 18.750000.\n",
+      "Epoch 1 of 4 : loss of 20.1060782671\n",
+      "Epoch 2 of 4 : loss of 18.7206141949\n",
+      "Epoch 3 of 4 : loss of 18.6189688444\n",
+      "Epoch 4 of 4 : loss of 18.3454035521\n",
+      "Validation accuracy (after): 28.125000.\n",
       "Testing accuracy: 25.000000.\n"
      ]
     }
@@ -522,11 +522,6 @@
     "    valid_length = patient_dataset.validate.vcg_length\n",
     "    valid_y = patient_dataset.validate.target\n",
     "    \n",
-    "     # Grab testing set\n",
-    "    test_x = patient_dataset.test.vcg\n",
-    "    test_length = patient_dataset.test.vcg_length\n",
-    "    test_y = patient_dataset.test.target\n",
-    "    \n",
     "    # Output accuracy for validation set\n",
     "    print \"Validation accuracy (before): %2f.\" % sess.run(accuracy, feed_dict={\n",
     "            x: np.swapaxes(valid_x, 0, 1), \n",
@@ -535,21 +530,13 @@
     "        })\n",
     "\n",
     "    # Training loop\n",
-    "    for epoch in range(epochs+1):\n",
+    "    for epoch in range(epochs):\n",
     "        epoch_loss = 0\n",
     "        for step in range(training_steps):\n",
     "\n",
     "            # Grab the next batch from the training set\n",
     "            batch_x, batch_length, batch_y = patient_dataset.train.next_batch()\n",
-    "            #print str(patient_dataset.train.index)\n",
-    "\n",
-    "            # Train for one step\n",
-    "#             sess.run(train, feed_dict={\n",
-    "#                     x: np.swapaxes(batch_x, 0, 1), \n",
-    "#                     sequence_length: batch_length, \n",
-    "#                     y: batch_y\n",
-    "#             })\n",
-    "            \n",
+    "      \n",
     "            # Accumulate cost for each epoch\n",
     "            _, step_cost = sess.run([train, cost], feed_dict={\n",
     "                    x: np.swapaxes(batch_x, 0, 1), \n",
@@ -558,19 +545,21 @@
     "            })\n",
     "            epoch_loss += step_cost\n",
     "\n",
-    "            # Output cost\n",
-    "#             if step % display_step == 0:\n",
-    "#                 step_accuracy = sess.run(accuracy, feed_dict={\n",
-    "#                     x: np.swapaxes(batch_x, 0, 1), \n",
-    "#                     sequence_length: batch_length, \n",
-    "#                     y: batch_y   \n",
-    "#                 })\n",
-    "            \n",
-    "            #print \"Step %d: Cost: %4f, Accuracy: %2f.\" % (step, step_cost, step_accuracy)\n",
-    "                \n",
-    "        print 'Epoch', epoch, 'of', epochs, 'loss:', epoch_loss\n",
+    "        # Print total loss for each epoch\n",
+    "        print 'Epoch', (epoch + 1), 'of', epochs, ': loss of', epoch_loss\n",
     "    \n",
-    "\n",
+    "    # Output accuracy for validation set\n",
+    "    print \"Validation accuracy (after): %2f.\" % sess.run(accuracy, feed_dict={\n",
+    "            x: np.swapaxes(valid_x, 0, 1), \n",
+    "            sequence_length: valid_length, \n",
+    "            y: valid_y \n",
+    "        })\n",
+    "    \n",
+    "    # Grab testing set\n",
+    "    test_x = patient_dataset.test.vcg\n",
+    "    test_length = patient_dataset.test.vcg_length\n",
+    "    test_y = patient_dataset.test.target\n",
+    "    \n",
     "    # Output accuracy for testing set\n",
     "    print \"Testing accuracy: %2f.\" % sess.run(accuracy, feed_dict={\n",
     "            x: np.swapaxes(test_x, 0, 1), \n",
@@ -592,7 +581,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -606,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
