--- a/dataset_wrapper.ipynb
+++ b/dataset_wrapper.ipynb
@@ -209,9 +209,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VCG Dimensions: (608, 170, 3)\n",
-      "VCG Sequence Length Dimensions: (608,)\n",
-      "VCG Sequence Class Indices: (608,)\n"
+      "VCG Dimensions: (1210, 130, 3)\n",
+      "VCG Sequence Length Dimensions: (1210,)\n",
+      "VCG Sequence Class Indices: (1210,)\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -238,14 +238,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[  1.14859699e-06,  -8.52689766e-07,  -1.62738885e-07],\n",
-       "       [  6.27637887e-03,   8.56158091e-04,  -2.80092681e-05],\n",
-       "       [  1.73977576e-02,   2.37706699e-03,  -8.70847070e-05],\n",
-       "       [  3.22087184e-02,   4.39808983e-03,  -1.79709998e-04],\n",
-       "       [  4.66350503e-02,   6.36596978e-03,  -2.86549999e-04]], dtype=float32)"
+       "array([[ -4.17658654e-07,  -2.90673141e-06,   4.57174694e-06],\n",
+       "       [  5.85916000e-03,   8.50800000e-04,  -6.00100000e-04],\n",
+       "       [  1.88238800e-02,   2.74487000e-03,  -1.94500000e-03],\n",
+       "       [  3.68574500e-02,   5.37931000e-03,  -3.82863000e-03],\n",
+       "       [  5.84938100e-02,   8.55723000e-03,  -6.13386000e-03]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -266,10 +266,10 @@
     {
      "data": {
       "text/plain": [
-       "array([170, 170, 170, 170, 170], dtype=int32)"
+       "array([130, 130, 130, 130, 130])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -298,28 +298,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All VCGs have 170 timesteps.\n"
+      "All VCGs have 130 timesteps.\n"
      ]
     }
    ],
    "source": [
-    "# Check that the length of each VCG is exactly 170 for Patient 2\n",
-    "if vcg_length[vcg_length < 170]:\n",
-    "    print \"Exists a VCG with a length not equal to 170 timesteps.\"\n",
+    "# Check that the length of each VCG is exactly 130 for Patient 6/7\n",
+    "if vcg_length[vcg_length < 130]:\n",
+    "    print \"Exists a VCG with a length not equal to 130 timesteps.\"\n",
     "else:\n",
-    "    print \"All VCGs have 170 timesteps.\""
+    "    print \"All VCGs have 130 timesteps.\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that all VCG's for Patient 2 have exactly 170 timesteps. It is possible that this feature does not exist in other patients."
+    "Note that all VCG's for Patient 6/7 have exactly 130 timesteps. It is possible that this feature does not exist in other patients."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -328,8 +328,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VCG Sequences #1-5 falls in classes: [2 2 2 2 3]\n",
-      "VCG Sequence #187 falls in class: 0\n"
+      "VCG Sequences #1-5 falls in classes: [4 2 2 2 3]\n",
+      "VCG Sequence #187 falls in class: 1\n"
      ]
     }
    ],
@@ -337,8 +337,8 @@
     "# Print the first five class indices\n",
     "print \"VCG Sequences #1-5 falls in classes: \" + str(target[:5])\n",
     "\n",
-    "# VCG Sequence number 187 has a dyssynchrony index of 0.0\n",
-    "# It should be mapped to class 0 instead of -5\n",
+    "# VCG Sequence number 187 has a dyssynchrony index of 0.604\n",
+    "# It should be mapped to class 1\n",
     "print \"VCG Sequence #187 falls in class: \" + str(target[186])"
    ]
   },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -386,9 +386,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: 416\n",
-      "Validation set size: 96\n",
-      "Testing set size: 96\n"
+      "Training set size: 990\n",
+      "Testing set size: 220\n"
      ]
     }
    ],
@@ -400,13 +399,12 @@
     "\n",
     "# Sizes of sets\n",
     "print \"Training set size: \" + str(patient_dataset.train.randomize.max() + 1)\n",
-    "print \"Validation set size: \" + str(patient_dataset.validate.randomize.max() + 1)\n",
     "print \"Testing set size: \" + str(patient_dataset.test.randomize.max() + 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -415,10 +413,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index of first example: 32\n",
-      "Dimensions of VCG: (32, 170, 3)\n",
-      "Dimensions of VCG lengths: (32,)\n",
-      "Dimensions of targets: (32,)\n"
+      "Index of first example: 55\n",
+      "Dimensions of VCG: (55, 130, 3)\n",
+      "Dimensions of VCG lengths: (55,)\n",
+      "Dimensions of targets: (55,)\n"
      ]
     }
    ],
@@ -437,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -446,30 +444,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[215 180 397 366 137  43 195 220 279  10 408   3 282 283 256 290 248 119\n",
-      " 315 273 121 161  66 377 169 337  37 403 183 340 406 247 203 221 286  63\n",
-      "  44 328 200 185 231 399 389 107 131 304 232 338  64 276 378 143 122 135\n",
-      " 300 392 277 369 216  93 380  99 324 168 325  41 105 223  74  55 395  38\n",
-      " 350 405 182 258 264 228 409 139  90 361 197 318 147 326 151 184 123 321\n",
-      " 285  40  96 330 234  92 319 271  57 347 298 303 174 217 156 292 252 243\n",
-      " 351 149  20  97  67 394 211 128  77 345 353 360 170 145  21  17 210  26\n",
-      " 362  60 357 402 414 173  50 311 126 154 372 177  83 251 175  32  11  59\n",
-      " 259  88 370 191  81 225 188 278 323 144 363 214 240 206 178 333  56  75\n",
-      " 166 117  79 262 209 287  19  25  48 320 265 297 244 140 192  28 257   0\n",
-      " 167 307 386 384 281 125 396 302  76 253 222  84  46 164 114  45  80 233\n",
-      " 103 246 219  15  70 186 288 365  72 199 150 133  89 160  22  33   7 241\n",
-      " 141  42  52  23 385   5 317 335  14 132 387 383 130  31 205  68 245  62\n",
-      "  29  13 236 368 296  82 229 331 356 196   4 224 354 104 346 181  91 305\n",
-      " 316 187 153 109  12 112 267  54 165 179 312 371 374  51 275 379 295 332\n",
-      " 310 294 255 158 280  73 322 270 235 336 162 263 189  86 299  85 367 415\n",
-      "   1 148 376 163 146 212  69 136 172 359 355 237 249 142 308  36 382  39\n",
-      " 190 194 155   9 400  87  24 301 254 113 358 134 120 388 373 218 413 393\n",
-      " 111 341 293 159 176 118  18 239  65  53  61 171 129  49 138 230  16 127\n",
-      " 401 208 260 314  98  94 349   8  47 116 343 269 327 348  34 407 102 411\n",
-      " 352 124 157 238  35  58 306 390 410 334 329 375  30 412 242 213 268 291\n",
-      " 272 250 152 106 110  95 100 342 313 204 284   6 309 266 101 339 289 227\n",
-      " 207 404 201 274 115 261 381  78 193 398  71 391  27   2 198 108 226 364\n",
-      " 344 202]\n"
+      "[570 830  18 188  88 278 891 868  97 501 894 142 846 532 551 878 180 957\n",
+      " 614  72 720 475 406 263 168 535 390  86 721 776 255 262 606 829 520 881\n",
+      "  75 513 612 929 900 136 631 916 867 702 785 206 322 318 768 565  85 447\n",
+      "  92 556 437 181 131 669 539 402 369 409 368 838  30 901 531 332 954 552\n",
+      " 158 658  16 793  82 203 741  28 201 789 919 469 333 160 113  57 430  91\n",
+      " 965 774 607 345 403 664 381  59 541 731 618  62 795 207 588 984 624 506\n",
+      " 622 896 250 745 821 983 287 564 674 771  96 416 657 587 635 862 321 396\n",
+      " 578 733 421 341 521  15 167 577 232 522 667 749 625 328 343 254  37 566\n",
+      " 453 866 979 184 640 773 724 400 177  53 855 769 788 107  20 497 563 530\n",
+      " 909 428 939 844 511 555 324 886 597 514 433 445 805 106 363 191 339 349\n",
+      " 863 600 987 918 649 179 155  77  64 124 590 751 923  80 611 948  32 643\n",
+      " 880 637 850 959 673 202 604 870 226 825 215 344 924 775 752 283 298  34\n",
+      " 175 706 471 540 719 295 127 913 675 115 134 353 336 293 268 726 399   3\n",
+      "  60 294 746 841  17 253 164 443  65 485  50 385 228 561  47 182 958 140\n",
+      "  63 613 797 407 985  55 174 683 591 767 516 146 902 165 617 102 729 571\n",
+      " 476  76 258 503 638 436 196 709 633 219 982 549 836 225 744 701 871 364\n",
+      " 812 138 962 926 325 572 619 688 505 672 882 527 705 247 316 432 685 860\n",
+      " 419 289 700 653 843  33 582 967 435 354 448 655 711 642 558 839 139 717\n",
+      " 772 981 864 410 819 249 461 340 260 246   8 835 426 374 297 654 905   7\n",
+      " 930 186 220 261 698 686  54  27  87 288 111 229 760 893 317 429 925 105\n",
+      "  14 707 596 820 214 879  44 171 259 496 739 273 938 367 525 574 842 422\n",
+      " 290 910 560 308 790 477  36  78 526 762 818 823 446 275  13 234 326 903\n",
+      " 722 414 728 840 271 666  21 252 899 609 626 389 988 281  67 911 608 810\n",
+      " 133 418 393 195 620 301 172 157  89 562 356 425 323 481 975 623 715 451\n",
+      " 292  51  22 811 242  31 852 279 193 348 211 680 824 742 908 971 575 163\n",
+      " 251 679 187 794 397 489 330 851  79 149 126 815 313 537 415 636 148 928\n",
+      " 346 543 386   4 493  49 239 765 377 848 161  71 116 935 302 961 347 408\n",
+      " 937 169 755  74 602 758 378 153 695  26 468 299 529 632 944 725 320 946\n",
+      " 723 129 757 550 118 831 595 659 670 854 452 738 528 693 832 713 736 130\n",
+      " 786 581 459 660 872 208 312   5 787 784 210  56 780 151 221 405 492 853\n",
+      " 941 727 373 387 955 491 291 800 969 989 218 243 932 114 376 125 687 953\n",
+      " 806 671 963 192 212  41 150 438 424 241 601 914 465 737 895 413 523 603\n",
+      " 976 598 708 545 936  29  35 781 507 439 257  23 159 803 231 460  19 889\n",
+      " 183 431 342 615 833 650 109 519 370 949 382 952 678 152 734 499 662 512\n",
+      " 285 245 676 185 796 128 145 639 917 488 235 524 735 509 808 238 510 284\n",
+      "  81 189 845 743 479 567 856 480 427  25 487 331 904 628 798 500 444   9\n",
+      " 334   1 538 681 119 352 449 216 379 122 934 647 859 792 388 470 747 120\n",
+      " 205 314 147 553  61 309 656   0 951 763 267 873 584 956 651 641 536 143\n",
+      " 557 104 265 173 380 645 652 665 350  45  12 980 943  46 240 766 474 272\n",
+      " 579 100  52 307 358 286 573 546 834 483 712  73 750 337 764 730  93 277\n",
+      " 110 141 668  98 897 108 198 621 440 978 360 450  70 303 227 593 204 892\n",
+      " 361 616 583 478 103 732 782 420 170 950 454 580 802 968 276 236 972 417\n",
+      " 329 222 224 915 887 847 365 898  39 807 865 486 362 877 801 534 176 586\n",
+      " 922 977 822 466 199 890 154 117 209 395 401 585 351 213 544 605 857  68\n",
+      " 178 947 883 691 610  69 828 964 304 884 927 357 779 770 920 912 112 799\n",
+      " 123 237  95  90 827  11 338 504 166 648 144 412 826  38 244 305 266 335\n",
+      " 398 710 366  94 156 576 933 462 677 518 966   2 869 876 716 778 467  10\n",
+      " 132 703 137 589 858 849 270 371 804 472 423 568 269 906 484 740 233 300\n",
+      " 464 456 714 694 630 777 547 517 455 375 684 490 592 194 599 494  48 817\n",
+      " 907 463 327 310 274 311  43 704 986 970  99 690 392 482 508 441 837 756\n",
+      " 391 515 383 282 533 699 502 554 223 594  84 629 162 197 306 875 663 682\n",
+      " 816 960 754 627 761 791 359  24 404  58 355 495 874 748 498 248 945 121\n",
+      " 753  42 473 783 697 442 861 888 411 814 434 931 394  83 646 689 942 548\n",
+      " 718 458 809 200 190 542 559 974 940 264  40 759 280 457 315 217 692   6\n",
+      " 101 256 296 634 696 384 661 135 644 569 921 319 885 813  66 372 230 973]\n"
      ]
     }
    ],
