--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -82,15 +82,15 @@
    "source": [
     "# Hyperparameters\n",
     "learning_rate = 0.001\n",
-    "training_steps = 26\n",
+    "training_steps = 18 # 990 training examples / 1 batch of 55 = 18 total batches\n",
     "num_hidden = 200\n",
     "display_step = 1\n",
     "\n",
     "# Network Parameters\n",
-    "num_steps = 170\n",
+    "num_steps = 130\n",
     "num_inputs = 3\n",
     "num_classes = 5\n",
-    "epochs = 4\n",
+    "epochs = 0\n",
     "\n",
     "\n",
     "# Where TensorFlow saves metadata for TensorBoard\n",
@@ -118,7 +118,7 @@
    "source": [
     "import tensorflow as tf \n",
     "\n",
-    "# VCG input [170, None, 3]\n",
+    "# VCG input [130, None, 3]\n",
     "x = tf.placeholder(tf.float32, [num_steps, None, num_inputs])\n",
     "\n",
     "# VCG sequence lengths\n",
@@ -242,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output tensor shape: (170, ?, 200)\n"
+      "Output tensor shape: (130, ?, 200)\n"
      ]
     }
    ],
@@ -275,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input batch shape before swap: (32, 170, 3)\n",
-      "Input batch shape after swap: (170, 32, 3)\n"
+      "Input batch shape before swap: (55, 130, 3)\n",
+      "Input batch shape after swap: (130, 55, 3)\n"
      ]
     }
    ],
@@ -500,13 +500,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy (before): 28.125000.\n",
-      "Epoch 0 of 4 loss: 38.5699089766\n",
-      "Epoch 1 of 4 loss: 36.5276751518\n",
-      "Epoch 2 of 4 loss: 36.3755083084\n",
-      "Epoch 3 of 4 loss: 36.156022191\n",
-      "Epoch 4 of 4 loss: 36.4165626764\n",
-      "Testing accuracy: 25.000000.\n"
+      "Testing accuracy (before): 20.909090.\n",
+      "Epoch 0 of 0 loss: 27.1996885538\n",
+      "Testing accuracy (After): 39.090912.\n"
      ]
     }
    ],
@@ -518,9 +514,9 @@
     "    sess.run(init)\n",
     "    \n",
     "    # Grab validation set\n",
-    "    valid_x = patient_dataset.validate.vcg\n",
-    "    valid_length = patient_dataset.validate.vcg_length\n",
-    "    valid_y = patient_dataset.validate.target\n",
+    "#     valid_x = patient_dataset.validate.vcg\n",
+    "#     valid_length = patient_dataset.validate.vcg_length\n",
+    "#     valid_y = patient_dataset.validate.target\n",
     "    \n",
     "     # Grab testing set\n",
     "    test_x = patient_dataset.test.vcg\n",
@@ -528,10 +524,10 @@
     "    test_y = patient_dataset.test.target\n",
     "    \n",
     "    # Output accuracy for validation set\n",
-    "    print \"Validation accuracy (before): %2f.\" % sess.run(accuracy, feed_dict={\n",
-    "            x: np.swapaxes(valid_x, 0, 1), \n",
-    "            sequence_length: valid_length, \n",
-    "            y: valid_y \n",
+    "    print \"Testing accuracy (before): %2f.\" % sess.run(accuracy, feed_dict={\n",
+    "            x: np.swapaxes(test_x, 0, 1), \n",
+    "            sequence_length: test_length, \n",
+    "            y: test_y \n",
     "        })\n",
     "\n",
     "    # Training loop\n",
@@ -572,7 +568,7 @@
     "    \n",
     "\n",
     "    # Output accuracy for testing set\n",
-    "    print \"Testing accuracy: %2f.\" % sess.run(accuracy, feed_dict={\n",
+    "    print \"Testing accuracy (After): %2f.\" % sess.run(accuracy, feed_dict={\n",
     "            x: np.swapaxes(test_x, 0, 1), \n",
     "            sequence_length: test_length, \n",
     "            y: test_y \n",
@@ -587,6 +583,44 @@
    "source": [
     "We feed it the validation set before and after to show that the neural network has learned *something*. However, these numbers are far from impressive. We should consider other parameters that could potentially affect the dyssynchrony."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3:46AM: \n",
+    "\n",
+    "Testing accuracy (before): 12.727272.\n",
+    "\n",
+    "Epoch 0 of 2 loss: 27.0150350332\n",
+    "Epoch 1 of 2 loss: 23.9664263725\n",
+    "Epoch 2 of 2 loss: 22.5563828945\n",
+    "\n",
+    "Testing accuracy (After): 57.272728."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "11:27AM:\n",
+    "Testing accuracy (before): 23.636364.\n",
+    "\n",
+    "Epoch 0 of 0 loss: 26.441947937\n",
+    "\n",
+    "Testing accuracy (After): 44.545452."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
