--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -81,17 +81,16 @@
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "learning_rate = 0.001\n",
-    "training_steps = 18 # 990 training examples / 1 batch of 55 = 18 total batches\n",
-    "num_hidden = 200\n",
+    "#learning_rate = 0.1\n",
+    "training_steps = 64 # 1472 training examples / 1 batch of 23 = 64 total batches\n",
+    "num_hidden = 130\n",
     "display_step = 1\n",
     "\n",
     "# Network Parameters\n",
     "num_steps = 130\n",
     "num_inputs = 3\n",
     "num_classes = 5\n",
-    "epochs = 0\n",
-    "\n",
+    "epochs = 9\n",
     "\n",
     "# Where TensorFlow saves metadata for TensorBoard\n",
     "logs_path='Data/'"
@@ -186,7 +185,7 @@
     "# Define a lstm cell with tensorflow\n",
     "cell = rnn_cell.BasicLSTMCell(\n",
     "    num_units=num_hidden,\n",
-    "    forget_bias=5.0, \n",
+    "    forget_bias=1.0, \n",
     "    state_is_tuple=True\n",
     ")"
    ]
@@ -242,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output tensor shape: (130, ?, 200)\n"
+      "Output tensor shape: (130, ?, 130)\n"
      ]
     }
    ],
@@ -275,8 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input batch shape before swap: (55, 130, 3)\n",
-      "Input batch shape after swap: (130, 55, 3)\n"
+      "Input batch shape before swap: (23, 130, 3)\n",
+      "Input batch shape after swap: (130, 23, 3)\n"
      ]
     }
    ],
@@ -423,7 +422,7 @@
    "source": [
     "# Initialize TF optimizer\n",
     "optimizer = tf.train.AdamOptimizer(\n",
-    "    learning_rate=learning_rate,\n",
+    "    #learning_rate=learning_rate,\n",
     "    name=\"AdamOptimizer\"\n",
     ")"
    ]
@@ -493,16 +492,26 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing accuracy (before): 20.909090.\n",
-      "Epoch 0 of 0 loss: 27.1996885538\n",
-      "Testing accuracy (After): 39.090912.\n"
+      "Testing accuracy (before): 18.840580.\n",
+      "Epoch 0 of 9 loss: 86.9466418028\n",
+      "Epoch 1 of 9 loss: 71.7236349583\n",
+      "Epoch 2 of 9 loss: 67.3820146918\n",
+      "Epoch 3 of 9 loss: 55.0486302376\n",
+      "Epoch 4 of 9 loss: 48.5060537159\n",
+      "Epoch 5 of 9 loss: 49.4411396086\n",
+      "Epoch 6 of 9 loss: 46.7226067781\n",
+      "Epoch 7 of 9 loss: 46.3157350123\n",
+      "Epoch 8 of 9 loss: 38.8151058853\n",
+      "Epoch 9 of 9 loss: 35.6387427151\n",
+      "Testing accuracy (After): 71.884064.\n"
      ]
     }
    ],
@@ -512,11 +521,6 @@
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
-    "    \n",
-    "    # Grab validation set\n",
-    "#     valid_x = patient_dataset.validate.vcg\n",
-    "#     valid_length = patient_dataset.validate.vcg_length\n",
-    "#     valid_y = patient_dataset.validate.target\n",
     "    \n",
     "     # Grab testing set\n",
     "    test_x = patient_dataset.test.vcg\n",
@@ -537,14 +541,6 @@
     "\n",
     "            # Grab the next batch from the training set\n",
     "            batch_x, batch_length, batch_y = patient_dataset.train.next_batch()\n",
-    "            #print str(patient_dataset.train.index)\n",
-    "\n",
-    "            # Train for one step\n",
-    "#             sess.run(train, feed_dict={\n",
-    "#                     x: np.swapaxes(batch_x, 0, 1), \n",
-    "#                     sequence_length: batch_length, \n",
-    "#                     y: batch_y\n",
-    "#             })\n",
     "            \n",
     "            # Accumulate cost for each epoch\n",
     "            _, step_cost = sess.run([train, cost], feed_dict={\n",
@@ -552,20 +548,9 @@
     "                    sequence_length: batch_length, \n",
     "                    y: batch_y\n",
     "            })\n",
-    "            epoch_loss += step_cost\n",
-    "\n",
-    "            # Output cost\n",
-    "#             if step % display_step == 0:\n",
-    "#                 step_accuracy = sess.run(accuracy, feed_dict={\n",
-    "#                     x: np.swapaxes(batch_x, 0, 1), \n",
-    "#                     sequence_length: batch_length, \n",
-    "#                     y: batch_y   \n",
-    "#                 })\n",
     "            \n",
-    "            #print \"Step %d: Cost: %4f, Accuracy: %2f.\" % (step, step_cost, step_accuracy)\n",
-    "                \n",
+    "            epoch_loss += step_cost\n",
     "        print 'Epoch', epoch, 'of', epochs, 'loss:', epoch_loss\n",
-    "    \n",
     "\n",
     "    # Output accuracy for testing set\n",
     "    print \"Testing accuracy (After): %2f.\" % sess.run(accuracy, feed_dict={\n",
@@ -577,18 +562,124 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "We feed it the validation set before and after to show that the neural network has learned *something*. However, these numbers are far from impressive. We should consider other parameters that could potentially affect the dyssynchrony."
+    "# Logs\n",
+    "\n",
+    "Below are testing accuracies with different hyperparameter configurations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3:46AM: \n",
+    "## 130 Hidden Units, Learning Rate = 0.01, Forget Bias = 1.0, 10 Epochs (1 trial)\n",
+    "Testing accuracy (before): 18.840580.\n",
+    "Epoch 0 of 9 loss: 86.9466418028\n",
+    "Epoch 1 of 9 loss: 71.7236349583\n",
+    "Epoch 2 of 9 loss: 67.3820146918\n",
+    "Epoch 3 of 9 loss: 55.0486302376\n",
+    "Epoch 4 of 9 loss: 48.5060537159\n",
+    "Epoch 5 of 9 loss: 49.4411396086\n",
+    "Epoch 6 of 9 loss: 46.7226067781\n",
+    "Epoch 7 of 9 loss: 46.3157350123\n",
+    "Epoch 8 of 9 loss: 38.8151058853\n",
+    "Epoch 9 of 9 loss: 35.6387427151\n",
+    "\n",
+    "**Testing accuracy (After): 71.884064.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 500 Hidden Units, Learning Rate = 0.1, Forget Bias = 1.0, 5 Epochs (1 trial)\n",
+    "* Takes forever to compute.\n",
+    "\n",
+    "Testing accuracy (before): 34.202896.\n",
+    "Epoch 0 of 4 loss: 313.059134722\n",
+    "Epoch 1 of 4 loss: 141.392490625\n",
+    "Epoch 2 of 4 loss: 160.852389574\n",
+    "Epoch 3 of 4 loss: 143.065216303\n",
+    "Epoch 4 of 4 loss: 180.669414997\n",
+    "**Testing accuracy (After): 16.811594.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 130 Hidden Units, Learning Rate = 0.1, 5 Epochs (3 trials)\n",
+    "Testing accuracy (before): 8.695652.\n",
+    "Epoch 0 of 4 loss: 136.298583627\n",
+    "Epoch 1 of 4 loss: 112.260660172\n",
+    "Epoch 2 of 4 loss: 112.06046617\n",
+    "Epoch 3 of 4 loss: 112.86101222\n",
+    "Epoch 4 of 4 loss: 113.10868597\n",
+    "\n",
+    "**Testing accuracy (After): 48.985508.**\n",
+    "\n",
+    "Testing accuracy (before): 20.000000.\n",
+    "Epoch 0 of 4 loss: 112.314503551\n",
+    "Epoch 1 of 4 loss: 89.7153908014\n",
+    "Epoch 2 of 4 loss: 90.5457143784\n",
+    "Epoch 3 of 4 loss: 86.7460389137\n",
+    "Epoch 4 of 4 loss: 87.7445187569\n",
+    "\n",
+    "**Testing accuracy (After): 19.130434.**\n",
+    "\n",
+    "Testing accuracy (before): 18.840580.\n",
+    "Epoch 0 of 4 loss: 123.271966219\n",
+    "Epoch 1 of 4 loss: 107.379723668\n",
+    "Epoch 2 of 4 loss: 103.155661941\n",
+    "Epoch 3 of 4 loss: 98.2479534149\n",
+    "Epoch 4 of 4 loss: 94.7379181981\n",
+    "\n",
+    "**Testing accuracy (After): 43.768116.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 130 Hidden Units, Learning Rate = 0.01, 1 Epochs (3 trials)\n",
+    "Testing accuracy (before): 13.043478.\n",
+    "Epoch 0 of 0 loss: 90.2510339022\n",
+    "**Testing accuracy (After): 26.376810.**\n",
+    "\n",
+    "Testing accuracy (before): 21.449276.\n",
+    "Epoch 0 of 0 loss: 97.208155632\n",
+    "**Testing accuracy (After): 48.985508.** (What?)\n",
+    "\n",
+    "Testing accuracy (before): 18.840580.\n",
+    "Epoch 0 of 0 loss: 94.6349146366\n",
+    "**Testing accuracy (After): 26.666668.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 130 Hidden Units, Learning Rate = 0.1, 1 Epochs (3 trials)\n",
+    "### Learning Rate Sucks, High Initial Epoch cost\n",
+    "Testing accuracy (before): 14.202899.\n",
+    "Epoch 0 of 0 loss: 130.855649829\n",
+    "**Testing accuracy (After): 25.217390.**\n",
+    "\n",
+    "Testing accuracy (before): 13.333334.\n",
+    "Epoch 0 of 0 loss: 108.592070103\n",
+    "**Testing accuracy (After): 31.884060.**\n",
+    "\n",
+    "Testing accuracy (before): 12.173913.\n",
+    "Epoch 0 of 0 loss: 130.123143673\n",
+    "**Testing accuracy (After): 26.376810.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12/28 3:46AM: \n",
     "\n",
     "Testing accuracy (before): 12.727272.\n",
     "\n",
@@ -605,7 +696,8 @@
     "collapsed": true
    },
    "source": [
-    "11:27AM:\n",
+    "12/28 11:27AM:\n",
+    "\n",
     "Testing accuracy (before): 23.636364.\n",
     "\n",
     "Epoch 0 of 0 loss: 26.441947937\n",
@@ -614,13 +706,174 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "12/28 10:49PM:\n",
+    "\n",
+    "Testing accuracy (before): 18.550726.\n",
+    "\n",
+    "Epoch 0 of 0 loss: 80.8785734773\n",
+    "\n",
+    "Testing accuracy (After): 50.144928.\n",
+    "\n",
+    "\n",
+    "Testing accuracy (before): 18.550726.\n",
+    "\n",
+    "Epoch 0 of 0 loss: 78.6012746692\n",
+    "\n",
+    "Testing accuracy (After): 55.072464.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 200 Hidden Units, 5 Epochs\n",
+    "Testing accuracy (before): 8.405797.\n",
+    "\n",
+    "Epoch 0 of 4 loss: 87.044486165\n",
+    "\n",
+    "Epoch 1 of 4 loss: 74.7768107057\n",
+    "\n",
+    "Epoch 2 of 4 loss: 61.9183064699\n",
+    "\n",
+    "Epoch 3 of 4 loss: 57.8229709268\n",
+    "\n",
+    "Epoch 4 of 4 loss: 50.4153882861\n",
+    "\n",
+    "Testing accuracy (After): 59.130436."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 200 Hidden Units, 5 Epochs\n",
+    "Testing accuracy (before): 21.159420.\n",
+    "\n",
+    "Epoch 0 of 4 loss: 85.005581975\n",
+    "\n",
+    "Epoch 1 of 4 loss: 66.763032198\n",
+    "\n",
+    "**Epoch 2 of 4 loss: 55.1515764594**\n",
+    "\n",
+    "Epoch 3 of 4 loss: 61.9722278118\n",
+    "\n",
+    "Epoch 4 of 4 loss: 62.0436865687\n",
+    "\n",
+    "Testing accuracy (After): 65.217392."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 200 Hidden Units, 10 Epochs (10 seems too much)\n",
+    "Testing accuracy (before): 6.376812.\n",
+    "\n",
+    "Epoch 0 of 9 loss: 87.8868556023\n",
+    "\n",
+    "Epoch 1 of 9 loss: 79.2146121264\n",
+    "\n",
+    "Epoch 2 of 9 loss: 71.9193285704\n",
+    "\n",
+    "Epoch 3 of 9 loss: 66.8535622358\n",
+    "\n",
+    "Epoch 4 of 9 loss: 63.949418664\n",
+    "\n",
+    "Epoch 5 of 9 loss: 62.8187206388\n",
+    "\n",
+    "**Epoch 6 of 9 loss: 68.8224443793**\n",
+    "\n",
+    "**Epoch 7 of 9 loss: 80.8298345804**\n",
+    "\n",
+    "**Epoch 8 of 9 loss: 68.9551228285**\n",
+    "\n",
+    "Epoch 9 of 9 loss: 61.9401971102\n",
+    "\n",
+    "Testing accuracy (After): 55.652172."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 200 Hidden Units, 10 Epochs (Decreasing Cost)\n",
+    "Testing accuracy (before): 22.608696.\n",
+    "\n",
+    "Epoch 0 of 9 loss: 87.5906553268\n",
+    "\n",
+    "Epoch 1 of 9 loss: 73.4702684283\n",
+    "\n",
+    "Epoch 2 of 9 loss: 62.0873242617\n",
+    "\n",
+    "Epoch 3 of 9 loss: 57.2415096164\n",
+    "\n",
+    "Epoch 4 of 9 loss: 53.7939738929\n",
+    "\n",
+    "Epoch 5 of 9 loss: 54.7720543742\n",
+    "\n",
+    "Epoch 6 of 9 loss: 47.2587285936\n",
+    "\n",
+    "Epoch 7 of 9 loss: 41.7448176444\n",
+    "\n",
+    "Epoch 8 of 9 loss: 38.8578896523\n",
+    "\n",
+    "Epoch 9 of 9 loss: 38.4436958432\n",
+    "\n",
+    "Testing accuracy (After): 66.666672."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 130 Hidden Units, 10 Epochs (Decreasing Cost)\n",
+    "Testing accuracy (before): 27.826086.\n",
+    "\n",
+    "Epoch 0 of 9 loss: 86.4047433138\n",
+    "\n",
+    "Epoch 1 of 9 loss: 70.9027529955\n",
+    "\n",
+    "Epoch 2 of 9 loss: 62.8989523053\n",
+    "\n",
+    "Epoch 3 of 9 loss: 57.5510672927\n",
+    "\n",
+    "Epoch 4 of 9 loss: 49.5711621046\n",
+    "\n",
+    "Epoch 5 of 9 loss: 44.8549052179\n",
+    "\n",
+    "Epoch 6 of 9 loss: 42.5955027938\n",
+    "\n",
+    "Epoch 7 of 9 loss: 42.7502356768\n",
+    "\n",
+    "Epoch 8 of 9 loss: 40.7285677791\n",
+    "\n",
+    "Epoch 9 of 9 loss: 39.7136183977\n",
+    "\n",
+    "Testing accuracy (After): 61.739128."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forget Bias = 1.0, 130 Hidden Units, 1 Epochs (3 trials)\n",
+    "Testing accuracy (before): 16.811594.\n",
+    "Epoch 0 of 0 loss: 85.2080425024\n",
+    "**Testing accuracy (After): 47.826088.**\n",
+    "\n",
+    "Testing accuracy (before): 7.826087.\n",
+    "Epoch 0 of 0 loss: 85.5266023874\n",
+    "**Testing accuracy (After): 35.942032.**\n",
+    "\n",
+    "Testing accuracy (before): 20.000000.\n",
+    "Epoch 0 of 0 loss: 88.2185543776\n",
+    "**Testing accuracy (After): 53.623188.**\n"
+   ]
   }
  ],
  "metadata": {
