removed patient 5, 8 epochs

--- a/dataset_wrapper.ipynb
+++ b/dataset_wrapper.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Implementation Steps\n",
     "### *Step 0: Setup*\n",
-    "To download the dataset, please email Chris Villongco for the link to the Dropbox. Once you have access, download the folder ```BiV2, BiV5, BiV6, BiV7, BiV8``` that corresponds to Patient 2, 5, 6, 7 and 8 (our choice of Patients is arbitrary, and we can use any of the patients available). Within that folder, we find the following files and folders:\n",
+    "To download the dataset, please email Chris Villongco for the link to the Dropbox. Once you have access, download the folder ```BiV2, BiV6, BiV7, BiV8``` that corresponds to Patient 2, 6, 7 and 8 (our choice of Patients is arbitrary, and we can use any of the patients available). Within that folder, we find the following files and folders:\n",
     "* ```vcg_measured```* The actual (recorded) VCG (not simulated)\n",
     "* ```vcg_model/``` The VCG simulations\n",
     "* ```BiV2_LVdyssync_opt.txt```* The calculated dyssynchrony index (not from simulations)\n",
@@ -209,9 +209,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VCG Dimensions: (2425, 130, 3)\n",
-      "VCG Sequence Length Dimensions: (2425,)\n",
-      "VCG Sequence Class Indices: (2425,)\n"
+      "VCG Dimensions: (1817, 130, 3)\n",
+      "VCG Sequence Length Dimensions: (1817,)\n",
+      "VCG Sequence Class Indices: (1817,)\n"
      ]
     }
    ],
@@ -386,8 +386,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: 1950\n",
-      "Testing set size: 475\n"
+      "Training set size: 1472\n",
+      "Testing set size: 345\n"
      ]
     }
    ],
@@ -413,10 +413,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index of first example: 25\n",
-      "Dimensions of VCG: (25, 130, 3)\n",
-      "Dimensions of VCG lengths: (25,)\n",
-      "Dimensions of targets: (25,)\n"
+      "Index of first example: 23\n",
+      "Dimensions of VCG: (23, 130, 3)\n",
+      "Dimensions of VCG lengths: (23,)\n",
+      "Dimensions of targets: (23,)\n"
      ]
     }
    ],
@@ -444,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  55  145 1046 ..., 1376  335  121]\n"
+      "[1202 1363  966 ..., 1187  740 1056]\n"
      ]
     }
    ],
