--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# Hyperparameters\n",
     "#learning_rate = 0.1\n",
-    "training_steps = 78 # 1950 training examples / 1 batch of 25 = 78 total batches\n",
+    "training_steps = 78 # 1472 training examples / 1 batch of 23 = 64 total batches\n",
     "num_hidden = 130\n",
     "display_step = 1\n",
     "\n",
@@ -90,7 +90,7 @@
     "num_steps = 130\n",
     "num_inputs = 3\n",
     "num_classes = 5\n",
-    "epochs = 9\n",
+    "epochs = 7\n",
     "\n",
     "# Where TensorFlow saves metadata for TensorBoard\n",
     "logs_path='Data/'"
@@ -156,7 +156,7 @@
     "#         shape = [num_hidden, num_classes],\n",
     "#         ))\n",
     "# [5]\n",
-    "biases = tf.Variable(tf.zeros([num_classes]))\n",
+    "biases = tf.Variable(tf.ones([num_classes]))\n",
     "# biases = tf.Variable(tf.random_normal([num_classes]))"
    ]
   },
@@ -274,8 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input batch shape before swap: (25, 130, 3)\n",
-      "Input batch shape after swap: (130, 25, 3)\n"
+      "Input batch shape before swap: (23, 130, 3)\n",
+      "Input batch shape after swap: (130, 23, 3)\n"
      ]
     }
    ],
@@ -500,18 +500,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing accuracy (before): 30.315790.\n",
-      "Epoch 0 of 9 loss: 102.21546495\n",
-      "Epoch 1 of 9 loss: 85.1585726142\n",
-      "Epoch 2 of 9 loss: 68.7445184588\n",
-      "Epoch 3 of 9 loss: 69.1979663968\n",
-      "Epoch 4 of 9 loss: 59.1717105508\n",
-      "Epoch 5 of 9 loss: 56.1338808239\n",
-      "Epoch 6 of 9 loss: 52.0908441842\n",
-      "Epoch 7 of 9 loss: 61.0892435908\n",
-      "Epoch 8 of 9 loss: 54.1247192025\n",
-      "Epoch 9 of 9 loss: 48.7692163587\n",
-      "Testing accuracy (After): 48.631580.\n"
+      "Testing accuracy (before): 16.811594.\n",
+      "Epoch 0 of 7 loss: 91.7278665304\n",
+      "Epoch 1 of 7 loss: 71.0311040878\n",
+      "Epoch 2 of 7 loss: 61.4141131043\n",
+      "Epoch 3 of 7 loss: 55.3676898479\n",
+      "Epoch 4 of 7 loss: 45.3151681721\n",
+      "Epoch 5 of 7 loss: 43.0724439621\n",
+      "Epoch 6 of 7 loss: 41.474552393\n",
+      "Epoch 7 of 7 loss: 39.9131485969\n",
+      "Testing accuracy (After): 62.608696.\n"
      ]
     }
    ],
@@ -571,6 +569,101 @@
     "I have been **restarting the kernel and running every cell** each time I train, because I believe that rerunning the training block trains the same weights, causing it to overfit.\n",
     "\n",
     "I will restructure the code so that it will recreate the RNN fresh each time I call the training block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 130 Hidden Units, Uniform Weights Initialization, Ones Bias, Learning Rate = 0.001, Forget Bias = 1.0, 8 Epochs (3 trial)\n",
+    "* Trying to see if I can achieve the same or more testing accuracy and save time with 2 less epochs\n",
+    "* For logging and testing, we should create a data structure to allow us to change hyperparameters faster and constructively. Requires total restructuring.\n",
+    "\n",
+    "Testing accuracy (before): 15.942030.\n",
+    "Epoch 0 of 7 loss: 105.758852482\n",
+    "Epoch 1 of 7 loss: 96.0807543993\n",
+    "Epoch 2 of 7 loss: 75.8205763698\n",
+    "Epoch 3 of 7 loss: 69.6251090765\n",
+    "Epoch 4 of 7 loss: 60.6575129032\n",
+    "Epoch 5 of 7 loss: 57.7112552524\n",
+    "Epoch 6 of 7 loss: 50.9971821308\n",
+    "Epoch 7 of 7 loss: 46.9760034978\n",
+    "\n",
+    "**Testing accuracy (After): 68.405792.**\n",
+    "\n",
+    "Testing accuracy (before): 18.260870.\n",
+    "Epoch 0 of 7 loss: 96.4034589529\n",
+    "Epoch 1 of 7 loss: 78.0152802467\n",
+    "Epoch 2 of 7 loss: 64.5465246439\n",
+    "Epoch 3 of 7 loss: 58.5097361803\n",
+    "Epoch 4 of 7 loss: 61.9599393904\n",
+    "Epoch 5 of 7 loss: 64.1283715665\n",
+    "Epoch 6 of 7 loss: 54.3156335056\n",
+    "Epoch 7 of 7 loss: 51.0173790753\n",
+    "\n",
+    "**Testing accuracy (After): 69.855072.**\n",
+    "\n",
+    "Testing accuracy (before): 16.811594.\n",
+    "Epoch 0 of 7 loss: 91.7278665304\n",
+    "Epoch 1 of 7 loss: 71.0311040878\n",
+    "Epoch 2 of 7 loss: 61.4141131043\n",
+    "Epoch 3 of 7 loss: 55.3676898479\n",
+    "Epoch 4 of 7 loss: 45.3151681721\n",
+    "Epoch 5 of 7 loss: 43.0724439621\n",
+    "Epoch 6 of 7 loss: 41.474552393\n",
+    "Epoch 7 of 7 loss: 39.9131485969\n",
+    "\n",
+    "**Testing accuracy (After): 62.608696.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 130 Hidden Units, Uniform Weights Initialization, Ones Bias, Learning Rate = 0.001, Forget Bias = 1.0, 10 Epochs (3 trial)\n",
+    "* Removed Patient 5\n",
+    "\n",
+    "Testing accuracy (before): 25.507248.\n",
+    "Epoch 0 of 9 loss: 98.4000620246\n",
+    "Epoch 1 of 9 loss: 80.3719575405\n",
+    "Epoch 2 of 9 loss: 67.4463577867\n",
+    "Epoch 3 of 9 loss: 63.5426491499\n",
+    "Epoch 4 of 9 loss: 56.3771678805\n",
+    "Epoch 5 of 9 loss: 65.3326902092\n",
+    "Epoch 6 of 9 loss: 50.5698858202\n",
+    "Epoch 7 of 9 loss: 47.6168986857\n",
+    "Epoch 8 of 9 loss: 45.5237649381\n",
+    "Epoch 9 of 9 loss: 40.417042762\n",
+    "\n",
+    "**Testing accuracy (After): 69.565216.**\n",
+    "\n",
+    "Testing accuracy (before): 17.101448.\n",
+    "Epoch 0 of 9 loss: 104.702359319\n",
+    "Epoch 1 of 9 loss: 91.2188156843\n",
+    "Epoch 2 of 9 loss: 78.5097316504\n",
+    "Epoch 3 of 9 loss: 64.3646813929\n",
+    "Epoch 4 of 9 loss: 57.6082691848\n",
+    "Epoch 5 of 9 loss: 56.6367887259\n",
+    "Epoch 6 of 9 loss: 53.886698246\n",
+    "Epoch 7 of 9 loss: 52.5529902577\n",
+    "Epoch 8 of 9 loss: 49.821727097\n",
+    "Epoch 9 of 9 loss: 46.5403879881\n",
+    "\n",
+    "**Testing accuracy (After): 65.217392.**\n",
+    "\n",
+    "Testing accuracy (before): 21.159420.\n",
+    "Epoch 0 of 9 loss: 103.388524652\n",
+    "Epoch 1 of 9 loss: 86.5330268741\n",
+    "Epoch 2 of 9 loss: 76.4194939137\n",
+    "Epoch 3 of 9 loss: 64.6760467887\n",
+    "Epoch 4 of 9 loss: 63.7204320431\n",
+    "Epoch 5 of 9 loss: 54.6256348491\n",
+    "Epoch 6 of 9 loss: 48.2874209583\n",
+    "Epoch 7 of 9 loss: 44.2593310624\n",
+    "Epoch 8 of 9 loss: 43.7895878255\n",
+    "Epoch 9 of 9 loss: 49.9517833591\n",
+    "\n",
+    "**Testing accuracy (After): 70.144928.**\n"
    ]
   },
   {
@@ -693,6 +786,7 @@
    "metadata": {},
    "source": [
     "## 130 Hidden Units, Random Parameter Initialization Learning Rate = 0.001, Forget Bias = 1.0, 10 Epochs (3 trial)\n",
+    "* Random weight initialization shows promise\n",
     "\n",
     "Testing accuracy (before): 32.173912.\n",
     "Epoch 0 of 9 loss: 75.557598412\n",
